--- a/lounge/lounge.css
+++ b/lounge/lounge.css
@@ -1,9 +1,14 @@
-h1,h2{
+body {
   font-family: sans-serif;
-  color:       gray;
+}
+h1,h2{
+      color:       gray;
   }
  h1{ border-bottom: 1px solid black; 
 }
               p{
                 color:maroon;
               }
+em {
+  font-family: serif;
+}
