改变了边框样式

--- a/lounge.css
+++ b/lounge.css
@@ -12,7 +12,7 @@ h1{
 h2{
   font-size: 130%;
 }
-#guarantee {
+.guarantee {
   line-height: 1.9em;
   font-style: italic;
   font-family: Georgia, "Times New Roman",Times,serif;
@@ -29,3 +29,28 @@ h2{
   background-repeat: no-repeat;
   background-position: top left;
 }
+.elixirs {
+  border-width: thin;
+  border-style: solid;
+  border-color: #007e7e;
+  width: 200px;
+
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+
+  margin-left: 20px;
+
+  text-align: center;
+
+  background-image: url(images/cocktail.gif);
+  background-repeat: repeat-x;
+  line-height:1em;
+}
+.elixiers h2 {
+  color: black
+}
+.elixirs h3 {
+  color: #d12c47
+}
+
